--- a/style.css
+++ b/style.css
@@ -138,12 +138,10 @@ input:checked+.slider::before {
 }
 
 .credit-cards {
-
     margin: 2rem auto;
-
 }
 
-.credit-cards a {
+.credit-cards div{
     width: 100%;
     text-decoration: none;
     text-align: center;
